src/objects/Constant__mdt.object
<CustomObject>
    <description>This holds constant values used in classes</description>
    <fields>
        <fullName>ADCVD_Objects__c</fullName>
        <label>ADCVD Objects</label>
        <referenceTo>ADCVD_Objects__mdt</referenceTo>
        <relationshipLabel>Constants</relationshipLabel>
        <relationshipName>Constants</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Number_Value__c</fullName>
        <label>Number Value</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Record_Description__c</fullName>
        <label>Record Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Staffing_Assignment_Default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Staffing Assignment Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Staffing_Role__c</fullName>
        <label>Staffing Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accounting Director</fullName>
                </value>
                <value>
                    <fullName>Accounting PM</fullName>
                </value>
                <value>
                    <fullName>Analyst</fullName>
                </value>
                <value>
                    <fullName>AS Assistant</fullName>
                </value>
                <value>
                    <fullName>Assistant Secretary</fullName>
                </value>
                <value>
                    <fullName>Associate DAS</fullName>
                </value>
                <value>
                    <fullName>DAS</fullName>
                </value>
                <value>
                    <fullName>DAS Assistant</fullName>
                </value>
                <value>
                    <fullName>Office Director</fullName>
                </value>
                <value>
                    <fullName>Program Manager</fullName>
                </value>
                <value>
                    <fullName>Senior Legal</fullName>
                </value>
                <value>
                    <fullName>Senior Policy</fullName>
                </value>
                <value>
                    <fullName>Staff Accountant</fullName>
                </value>
                <value>
                    <fullName>Staff Legal</fullName>
                </value>
                <value>
                    <fullName>Staff Policy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>String_Value__c</fullName>
        <label>String Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Used_with_Field_Named__c</fullName>
        <label>Used with Field Named</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Constant</label>
    <pluralLabel>Constants</pluralLabel>
</CustomObject>